@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 May 2012; Nikoli <nikoli@lavabit.com> mplayer2-2.0_p20120517.ebuild,
+  mplayer2-9999.ebuild:
+  USE dirac was removed from libav
+
 *mplayer2-2.0_p20120517 (23 May 2012)
 
   23 May 2012; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_p20120517.ebuild,
